# QtBlank

./: CMakeLists.txt  Dockerfile  main.cpp  main.qml
.devcontainer/: devcontainer.json
.github/workflows/: docker-publish.yml
